--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/task_vsr?useSSL=false&useUnico
 spring.datasource.username=root
 spring.datasource.password=pa44w0rd
 spring.jpa.show-sql=true
+#spring.jackson.serialization.fail-on-empty-beans=false
