--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/task_vsr?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=pa44w0rd
+
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+security.ignored=true
+security.basic.enabled=false
+
+#logging.level.org.springframework.web=INFO
+#logging.level.org.hibernate=INFO
+
 #spring.jackson.serialization.fail-on-empty-beans=false
+
