--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,11 @@ spring.jpa.properties.hibernate.format_sql=true
 security.ignored=true
 security.basic.enabled=false
 
-#logging.level.org.springframework.web=INFO
-#logging.level.org.hibernate=INFO
+#logging.level.org.springframework.web=debug
+#logging.level.org.hibernate=debug
+
+logging.level.org.springframework.web=info
+logging.level.org.hibernate=info
 
 #spring.jackson.serialization.fail-on-empty-beans=false
 
