master_test02_department_entity_in process_06+mysql_db_include

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,22 @@ spring.datasource.password=pa44w0rd
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-security.ignored=true
-security.basic.enabled=false
+
 
 #logging.level.org.springframework.web=debug
-#logging.level.org.hibernate=debug
+logging.level.org.hibernate=debug
 
 logging.level.org.springframework.web=info
-logging.level.org.hibernate=info
+#logging.level.org.hibernate=info
 
 #spring.jackson.serialization.fail-on-empty-beans=false
+
+
+
+#security.ignored=true
+#security.basic.enabled=false
+#security.ignored=/**
+#spring.security.enabled=false
+#management.security.enabled=false
+#security.basic.enabled=false
 
