--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 #logging.level.org.springframework.web=debug
-logging.level.org.hibernate=debug
+logging.level.org.hibernate=info
 
 logging.level.org.springframework.web=info
 #logging.level.org.hibernate=info
