--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -73,6 +73,13 @@
             <version>2.8.8</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.security.oauth.boot/spring-security-oauth2-autoconfigure -->
+        <dependency>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+            <version>2.6.3</version>
+        </dependency>
+
         <!-- JWT-->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
